--- a/prt-frontend/package.json
+++ b/prt-frontend/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.0",
     "react": "^17.0.1",
+    "react-animated-css": "^1.2.1",
     "react-axios": "^2.0.5",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.1",
